<resources>
    <string name="app_name">Black_Jack</string>
    <string name="new_game">Deal</string>
    <string name="hit">Hit</string>
    <string name="stay">Stay</string>
    <string name="dealer">Dealer: </string>
    <string name="player">Player: </string>
    <string name="action_settings">Settings</string>
    <string name="player_bust">You Bust!</string>
    <string name="dealer_bust">Dealer Bust!</string>
    <string name="blackjack_alert">Blackjack!</string>
    <string name="dealer_won">Dealer Won!</string>
    <string name="player_won">You won!</string>
</resources>
