<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BlackJack"
    android:id="@+id/tableLayout"
    android:focusable="false"
    android:stretchColumns="0,1,2,3"
    android:background="@color/game_green"
    tools:layout_editor_absoluteY="8dp"
    tools:layout_editor_absoluteX="8dp">
    <TableRow>
        <LinearLayout>
        <TextView
            android:id="@+id/dealerTextView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_span="3"
            android:gravity="center"
            android:paddingTop="15dp"
            android:text="@string/dealer"
            android:textColor="@color/player_text_color"
            android:textSize="@dimen/text_size" />
        <TextView
            android:id="@+id/dealerScore"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_span="3"
            android:gravity="center"
            android:paddingTop="15dp"
            android:text=""
            android:textColor="@color/player_text_color"
            android:textSize="@dimen/text_size" />
        </LinearLayout>
    </TableRow>
    <TableRow>
        <LinearLayout>
        <ImageView
            android:id="@+id/card_1"
            android:src="@drawable/back_blue"
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin"/>
        <ImageView
            android:id="@+id/card_2"
            android:src="@drawable/back_blue"
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin"/>
        <ImageView
            android:id="@+id/card_3"
            android:src="@drawable/back_blue"
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin"/>
        <ImageView
            android:id="@+id/card_4"
            android:src="@drawable/back_blue"
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin"/>
        <ImageView
            android:id="@+id/card_5"
            android:src="@drawable/back_blue"
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin"/>
        </LinearLayout>
    </TableRow>
    <TableRow>
        <TextView
            android:id="@+id/playerTextView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_span="3"
            android:gravity="center"
            android:paddingTop="15dp"
            android:text="@string/player"
            android:textColor="@color/player_text_color"
            android:textSize="@dimen/text_size" />
        <TextView
            android:id="@+id/playerScore"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_span="3"
            android:gravity="center"
            android:paddingTop="15dp"
            android:text=""
            android:textColor="@color/player_text_color"
            android:textSize="@dimen/text_size" />
    </TableRow>
    <TableRow>
        <LinearLayout>
        <ImageView
            android:id="@+id/dealer_card_1"
            android:src="@drawable/back_blue"
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin" />
        <ImageView
            android:id="@+id/dealer_card_2"
            android:src="@drawable/back_blue"
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin"/>
        <ImageView
            android:id="@+id/dealer_card_3"
            android:src="@drawable/back_blue"
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin"/>
        <ImageView
            android:id="@+id/dealer_card_4"
            android:src="@drawable/back_blue"
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin"/>
        <ImageView
            android:id="@+id/dealer_card_5"
            android:src="@drawable/back_blue"
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin"/>
        </LinearLayout>
    </TableRow>
    <TableRow>
        <TextView
            android:id="@+id/notificationTextView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_span="3"
            android:gravity="center"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/notification_text_color"
            android:textSize="@dimen/text_size" />
    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/tableRow5">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_game"
            android:id="@+id/newGameButton"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hit"
            android:id="@+id/hitButton"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stay"
            android:id="@+id/stayButton"
            android:textSize="@dimen/button_text_size" />
    </TableRow>
</TableLayout>