<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/tableLayout"
    android:focusable="false"
    android:stretchColumns="0,1,2,3"
    android:background="@color/game_green"
    tools:layout_editor_absoluteY="8dp"
    tools:layout_editor_absoluteX="8dp">
    <LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back"
            android:id="@+id/backButton"
            android:textColor="@color/player_text_color"
            android:textSize="@dimen/button_text_size"/>
        <TextView
            android:id="@+id/wins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_span="3"
            android:gravity="center"
            android:padding="10dp"
            android:text="Wins: "
            android:textColor="@color/player_text_color"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/numberWins"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_span="3"
            android:text=""
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/notification_text_color"
            android:textSize="@dimen/text_size" />
        <TextView
            android:id="@+id/losses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_span="3"
            android:text="Losses: "
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/player_text_color"
            android:textSize="@dimen/text_size" />
        <TextView
            android:id="@+id/numberlosses"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_span="3"
            android:text=""
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/notification_text_color"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/boardLinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_span="3"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:id="@+id/dealerTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    android:layout_span="3"
                    android:gravity="center"
                    android:paddingTop="15dp"
                    android:text="@string/dealer"
                    android:textColor="@color/player_text_color"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/dealerScore"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    android:layout_span="3"
                    android:gravity="center"
                    android:paddingTop="15dp"
                    android:text=""
                    android:textColor="@color/player_text_color"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/game_green"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/dealerCard0"
                    android:layout_width="@dimen/card_width"
                    android:layout_height="@dimen/card_height"
                    android:layout_gravity="center"
                    android:layout_margin="5dp" />

                <ImageView
                    android:id="@+id/dealerCard1"
                    android:layout_width="@dimen/card_width"
                    android:layout_height="@dimen/card_height"
                    android:layout_gravity="center"
                    android:layout_margin="5dp" />

                <ImageView
                    android:id="@+id/dealerCard2"
                    android:layout_width="@dimen/card_width"
                    android:layout_height="@dimen/card_height"
                    android:layout_gravity="center"
                    android:layout_margin="5dp" />

                <ImageView
                    android:id="@+id/dealerCard3"
                    android:layout_width="@dimen/card_width"
                    android:layout_height="@dimen/card_height"
                    android:layout_gravity="center"
                    android:layout_margin="5dp" />

                <ImageView
                    android:id="@+id/dealerCard4"
                    android:layout_width="@dimen/card_width"
                    android:layout_height="@dimen/card_height"
                    android:layout_gravity="center"
                    android:layout_margin="5dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/dealerNotification"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_column="0"
                android:layout_gravity="center"
                android:layout_span="3"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="@color/notification_text_color"
                android:textSize="@dimen/text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:id="@+id/playerTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    android:layout_span="3"
                    android:gravity="center"
                    android:paddingTop="15dp"
                    android:text="@string/player"
                    android:textColor="@color/player_text_color"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/playerScore"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    android:layout_span="3"
                    android:gravity="center"
                    android:paddingTop="15dp"
                    android:text=""
                    android:textColor="@color/player_text_color"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="370dp"
                android:layout_height="100dp"
                android:background="@color/game_green"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/playerCard0"
                    android:layout_width="@dimen/card_width"
                    android:layout_height="@dimen/card_height"
                    android:layout_gravity="center"
                    android:layout_margin="5dp" />

                <ImageView
                    android:id="@+id/playerCard1"
                    android:layout_width="@dimen/card_width"
                    android:layout_height="@dimen/card_height"
                    android:layout_gravity="center"
                    android:layout_margin="5dp" />

                <ImageView
                    android:id="@+id/playerCard2"
                    android:layout_width="@dimen/card_width"
                    android:layout_height="@dimen/card_height"
                    android:layout_gravity="center"
                    android:layout_margin="5dp" />

                <ImageView
                    android:id="@+id/playerCard3"
                    android:layout_width="@dimen/card_width"
                    android:layout_height="@dimen/card_height"
                    android:layout_gravity="center"
                    android:layout_margin="5dp" />

                <ImageView
                    android:id="@+id/playerCard4"
                    android:layout_width="@dimen/card_width"
                    android:layout_height="@dimen/card_height"
                    android:layout_gravity="center"
                    android:layout_margin="5dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/playerNotification"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_column="0"
                android:layout_gravity="center"
                android:layout_span="3"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="@color/notification_text_color"
                android:textSize="@dimen/text_size" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/tableRow5">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_game"
            android:id="@+id/newGameButton"
            android:textColor="@color/player_text_color"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hit"
            android:id="@+id/hitButton"
            android:textColor="@color/player_text_color"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stay"
            android:id="@+id/stayButton"
            android:textColor="@color/player_text_color"
            android:textSize="@dimen/button_text_size" />
    </TableRow>
    <TableRow>
    </TableRow>
</TableLayout>
